// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkToApp component should render with href 1`] = `
<Memo()
  appId="ingestManager"
  href="/app/ingest"
>
  <EuiLink
    href="/app/ingest"
    onClick={[Function]}
  >
    <a
      className="euiLink euiLink--primary"
      href="/app/ingest"
      onClick={[Function]}
      rel="noreferrer"
    >
      link
    </a>
  </EuiLink>
</Memo()>
`;

exports[`LinkToApp component should render with minimum input 1`] = `
<Memo()
  appId="ingestManager"
>
  <EuiLink
    onClick={[Function]}
  >
    <button
      className="euiLink euiLink--primary"
      onClick={[Function]}
      type="button"
    >
      link
    </button>
  </EuiLink>
</Memo()>
`;
